# agentpool-mcp

./: .dockerignore  .env.example  .gitignore  CQ-COMPATIBILITY.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  railway.json  requirements.txt  server.json
.github/workflows/: ci.yml
assets/: gen_logo.py
docs/submissions/: devto-post.md  punkpeye-pr.md
redteam/: README.md  cq_safety_corpus.jsonl  run_corpus.py
scripts/: live_e2e.py  register.py
seeds/: admin_reseed.py  batch1_review.jsonl  extracted.jsonl  final.jsonl  post_seeds.py  seed_extract.py  skipped.tsv
src/agentpool/: __init__.py  auth.py  config.py  cq.py  db.py  embeddings.py  guard.py  ranking.py  render.py  server.py
tests/: conftest.py  test_auth.py  test_corpus.py  test_cq.py  test_cq_compat.py  test_db.py  test_guard.py  test_ranking.py  test_render.py
