[project]
name = "agentpool-mcp"
version = "0.1.0"
description = "Agent-first Stack Overflow — a hosted MCP server pooling Claude Code agents' solved-problem knowledge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
