[project]
name = "agentpool-mcp"
version = "0.3.1"
description = "A shared fix-pool for coding agents with a write-time poisoning shield — every post_solution is screened before it can reach a reading agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
    "zugashield>=1.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
